Ahora el path no rompe nada

--- a/src/main/java/algo3/fiuba/resources/estilos/estiloVistaMano.css
+++ b/src/main/java/algo3/fiuba/resources/estilos/estiloVistaMano.css
@@ -1,3 +1,9 @@
-{
+.mano {
+
     -fx-background-color: transparent;
+}
+
+.hola {
+
+   -fx-background-image: url("/algo3/fiuba/resources/img/fondo-arena.jpg");
 }
