--- a/src/main/java/algo3/fiuba/resources/estilos/estiloContenedorPrincipal.css
+++ b/src/main/java/algo3/fiuba/resources/estilos/estiloContenedorPrincipal.css
@@ -6,6 +6,7 @@
     -fx-background-image: url("/algo3/fiuba/resources/img/fondo-arena.jpg");
 }
 
+/* !!! esto no se está usando*/
 .muestrarioInfoCarta {
     -fx-font-size: 24px;
     -fx-font-color: WHITE;
