No se ve el fondo blanco en la mano

--- a/src/main/java/algo3/fiuba/resources/estilos/estiloContenedorPrincipal.css
+++ b/src/main/java/algo3/fiuba/resources/estilos/estiloContenedorPrincipal.css
@@ -6,10 +6,19 @@
     -fx-background-image: url("/algo3/fiuba/resources/img/fondo-arena.jpg");
 }
 
+.scroll-pane > .viewport {
+   -fx-background-color: transparent;
+}
+
+.scroll-pane {
+   -fx-background-color: transparent;
+}
+
 /* !!! esto no se está usando*/
 .muestrarioInfoCarta {
     -fx-font-size: 24px;
     -fx-font-color: WHITE;
     -fx-font-alignment: center;
 }
+
 
